--- a/drivers/emac-dwc-eqos/Makefile.builtin
+++ b/drivers/emac-dwc-eqos/Makefile.builtin
@@ -5,7 +5,8 @@ obj-$(CONFIG_EMAC_DWC_EQOS) += DWC_ETH_QOS_dev.o \
 		DWC_ETH_QOS_mdio.o \
 		DWC_ETH_QOS_eee.o \
 		DWC_ETH_QOS_platform.o \
-		DWC_ETH_QOS_rgmii_io_macro.o
+		DWC_ETH_QOS_rgmii_io_macro.o \
+		DWC_ETH_QOS_poll_support.o
 
 ifeq ($(CONFIG_PTP_1588_CLOCK), y)
 EXTRA_CFLAGS+=-DCONFIG_PTPSUPPORT_OBJ
