aqc-ipa-offload: Rename aqc-ipa driver to aqc_ipa_offload
Rename AQC offload driver from aqc-ipa.ko to aqc_ipa_offload.ko.

Change-Id: I9e83909fdc7bcdf6e279f21d7fea1faf3c62e4f6
Signed-off-by: Jinesh K. Jayakumar <jineshk@codeaurora.org>

--- a/drivers/aqc-ipa-offload/Makefile
+++ b/drivers/aqc-ipa-offload/Makefile
@@ -1,7 +1,7 @@
 
-obj-$(CONFIG_AQC_IPA) += aqc-ipa.o
+obj-m += aqc_ipa_offload.o
 
-aqc-ipa-y := aqo_main.o \
+aqc_ipa_offload-y := aqo_main.o \
 		aqo_debugfs.o \
 		aqo_gsi.o \
 		aqo_netdev.o \
