--- a/drivers/r8125/src/Kbuild
+++ b/drivers/r8125/src/Kbuild
@@ -9,12 +9,15 @@ ccflags-y += -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-cast-function-
 
 # Features enabled
 ccflags-y += -DCONFIG_ASPM -DENABLE_S5WOL -DENABLE_EEE -DENABLE_TX_NO_CLOSE -DCONFIG_R8125_NAPI -DCONFIG_R8125_VLAN
+ccflags-y += -DENABLE_MULTIPLE_TX_QUEUE -DENABLE_RSS_SUPPORT -DENABLE_LIB_SUPPORT
 ccflags-$(CONFIG_R8125_IPA_OFFLOAD) += -DCONFIG_RTL8125_IPA_OFFLOAD
 
 obj-m += r8125.o
 
 r8125-y := r8125_n.o \
 		rtl_eeprom.o \
-		rtltool.o
+		rtltool.o \
+		r8125_rss.o \
+		r8125_lib.o
 
 r8125-$(CONFIG_R8125_IPA_OFFLOAD) += r8125_ipa.o
