gsb: Add gsb support for sdx65 target
- Updated deprecated APIs on kernel 5.4

Change-Id: I4731efe269815f3df781bab7547db74f773d08ea
Signed-off-by: Aman Gupta<amangupt@codeaurora.org>

--- a/drivers/generic-sw-bridge/Makefile
+++ b/drivers/generic-sw-bridge/Makefile
@@ -20,6 +20,11 @@ MY_CFLAGS += -g
 ccflags-y += ${MY_CFLAGS}
 CC += ${MY_CFLAGS}
 
+KVER = $(KERNEL_VERSION)
+ifeq ($(KVER),$(filter 5.4%,$(KVER)))
+ccflags-y += -DISKERNEL5_4
+endif
+
 gsb-objs := \
 	generic_sw_bridge_main.o
 all:
